force-app/main/default/objects/T_Log_de_integracao__c/T_Log_de_integracao__c.object-meta.xml
<CustomObject>
    <label>Log de integração</label>
    <nameField>
        <displayFormat>Log-{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Log de integração</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs de integração</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>