force-app/main/default/objects/T_Log_de_integracao__c/fields/Datetime_SAP__c.field-meta.xml
<CustomField>
    <fullName>Datetime_SAP__c</fullName>
    <formula>CreatedDate+(3/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Datetime - SAP</label>
    <type>DateTime</type>
</CustomField>