force-app/main/default/objects/T_Log_de_integracao__c/fields/T_Data_de_inicio__c.field-meta.xml
<CustomField>
    <fullName>T_Data_de_inicio__c</fullName>
    <label>Data de início</label>
    <type>DateTime</type>
</CustomField>