force-app/main/default/objects/T_Log_de_integracao__c/fields/T_Data_fim__c.field-meta.xml
<CustomField>
    <fullName>T_Data_fim__c</fullName>
    <label>Data fim</label>
    <type>DateTime</type>
</CustomField>