force-app/main/default/objects/T_Log_de_integracao__c/fields/T_Nome_Integracao__c.field-meta.xml
<CustomField>
    <fullName>T_Nome_Integracao__c</fullName>
    <label>Nome Integração</label>
    <length>255</length>
    <type>Text</type>
</CustomField>