force-app/main/default/objects/T_Log_de_integracao__c/fields/T_Request__c.field-meta.xml
<CustomField>
    <fullName>T_Request__c</fullName>
    <label>Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>