force-app/main/default/objects/T_Log_de_integracao__c/fields/T_Response__c.field-meta.xml
<CustomField>
    <fullName>T_Response__c</fullName>
    <label>Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>