force-app/main/default/objects/T_Log_de_integracao__c/fields/T_Status__c.field-meta.xml
<CustomField>
    <fullName>T_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EM_PROCESSO</fullName>
                <label>Em processo</label>
            </value>
            <value>
                <fullName>PROCESSADO_ERRO</fullName>
                <label>Processada com erro</label>
            </value>
            <value>
                <fullName>PROCESSADO_SUCESSO</fullName>
                <label>Processada com sucesso</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>