force-app/main/default/objects/T_Log_de_integracao__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>T_Data_de_inicio__c</columns>
    <columns>T_Data_fim__c</columns>
    <columns>T_Nome_Integracao__c</columns>
    <columns>T_Request__c</columns>
    <columns>T_Response__c</columns>
    <columns>T_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>4/7/2020 12:00 AM</value>
    </filters>
    <label>Todos os registros</label>
</ListView>