force-app/main/default/objects/T_Log_de_integracao__c/listViews/Log_Send_BM.listView-meta.xml
<ListView>
    <fullName>Log_Send_BM</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>T_Data_de_inicio__c</columns>
    <columns>T_Data_fim__c</columns>
    <columns>T_Nome_Integracao__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>T_Request__c</columns>
    <columns>T_Response__c</columns>
    <columns>T_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>T_Nome_Integracao__c</field>
        <operation>equals</operation>
        <value>EnviarBoletim_Log</value>
    </filters>
    <label>Log Send BM</label>
</ListView>