force-app/main/default/objects/T_Log_de_integracao__c/listViews/Log_Status_BM.listView-meta.xml
<ListView>
    <fullName>Log_Status_BM</fullName>
    <columns>NAME</columns>
    <columns>T_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Datetime_SAP__c</columns>
    <columns>T_Request__c</columns>
    <columns>T_Response__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>T_Nome_Integracao__c</field>
        <operation>equals</operation>
        <value>StatusBoletim_Log</value>
    </filters>
    <label>Log Status BM</label>
    <sharedTo>
        <role>Administrator</role>
    </sharedTo>
</ListView>